--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "next": "12.0.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "windicss-webpack-plugin": "^1.5.5"
   },
   "devDependencies": {
     "@types/node": "16.11.6",
